java/src/main/java/com/stormhouseweb/langtech/graphics/Graphics.g4
// antlr4 -package com.stormhouseweb.langtech.graphics Graphics.g4
grammar Graphics;

file    : command+ ;
command : 'line' 'from' point 'to' point ;
point   : INT ',' INT ;
INT     : '0'..'9'+ ;
WS      : (' ' | '\t' | '\r' | '\n') {skip();} ;
